--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "pacakge-name",
+  "name": "package-name",
   "type": "module",
   "version": "0.8.0",
   "author": "linqtojs@gmail.com",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/linq2js/pacakge-name"
+    "url": "git+https://github.com/linq2js/package-name"
   },
   "bugs": {
-    "url": "https://github.com/linq2js/pacakge-name/issues"
+    "url": "https://github.com/linq2js/package-name/issues"
   },
-  "homepage": "https://github.com/linq2js/pacakge-name/",
+  "homepage": "https://github.com/linq2js/package-name/",
   "keywords": [],
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
